--- a/nosotros.html
+++ b/nosotros.html
@@ -92,8 +92,8 @@
       </div>
 
       <!-- novedades o noticias -->
-      <div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="noticias">
-        <h1 class="titulo">Noticias</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="nosotros">
+        <h1 class="titulo">Nosotros</h1>
         <div class="col">
           <div class="card">
             <img src="images/novedad-new-tec.jpg" class="card-img-top" alt="...">
