--- a/contacto.html
+++ b/contacto.html
@@ -91,93 +91,17 @@
         </button>
       </div>
 
-      <!-- novedades o noticias -->
-      <div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="noticias">
-        <h1 class="titulo">Noticias</h1>
-        <div class="col">
-          <div class="card">
-            <img src="images/novedad-new-tec.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Hardware</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://wa.me/3105188168" class="btn btn-primary buy" target="_blank">Comprar</a>
-            </div>
-          </div>
-        </div>
+      <!-- contacto -->
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="contacto">
+        <h1 class="titulo">Contacto</h1>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScukyeFKiQ0XEyPIOjK8FJ8bryIL1Ua4bzcjkZFNCGZBGT8SA/viewform?embedded=true" width="100%" height="1585" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 
-        <div class="col">
-          <div class="card">
-            <img src="images/novedad-new-tecno.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Computador</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://wa.me/3105188168" class="btn btn-primary buy" target="_blank">Comprar</a>
-            </div>
-          </div>
-        </div>
 
-        <div class="col">
-          <div class="card">
-            <img src="images/novedad-p-new.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Celular</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://wa.me/3105188168" class="btn btn-primary buy" target="_blank">Comprar</a>
-            </div>
-          </div>
-        </div>
+
       </div>
 
-      <!-- servicios -->
-      <section class="w-100">
-        <div class="row w-75 mx-auto" id="servicios-fila-1">
-          <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <!-- imagen del servicio -->
-            <img src="images/desarrollo.png" alt="Desarrollo" class="imgservicios">
-            <div>
-              <h3 class="fs-5 mt-4 px-4 pb-1">Desarrollo</h3>
-              <p class="px-4">
-                Desarrollo de aplicaciones web, apps moviles y de escritorio.
-              </p>  
 
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <!-- imagen del servicio -->
-            <img src="images/concepto.png" alt="Concepto" class="imgservicios">
-            <div>
-              <h3 class="fs-5 mt-4 px-4 pb-1">Concepto</h3>
-              <p class="px-4">
-                Concepto en diseño de aplicaciones web, apps moviles y de escritorio.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <!-- imagen del servicio -->
-            <img src="images/concepto.png" alt="Concepto" class="imgservicios">
-            <div>
-              <h3 class="fs-5 mt-4 px-4 pb-1">Concepto</h3>
-              <p class="px-4">
-                Concepto en diseño de aplicaciones web, apps moviles y de escritorio.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <!-- imagen del servicio -->
-            <img src="images/concepto.png" alt="Concepto" class="imgservicios">
-            <div>
-              <h3 class="fs-5 mt-4 px-4 pb-1">Concepto</h3>
-              <p class="px-4">
-                Concepto en diseño de aplicaciones web, apps moviles y de escritorio.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
+       
       <!-- footer con metodologia BEM-->
       <footer id="page-footer">
         <div class="footer__cta">
