--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav justify-content-end mx-auto me-2">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
@@ -60,10 +60,9 @@
               </li>
 
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Email" aria-label="Search">
-              <button class="btn btn-outline-dark" type="submit">Suscripción</button>
-            </form>
+          
+              <a href="" class="btn btn-outline-dark" >Unirse</a>
+           
           </div>
         </div>
       </nav>
